@@ -1,3 +1,8 @@
+2006-05-27  Kees Cook  <kees@outflux.net>
+
+	* src/extension/implementation/script.cpp: allow output extension
+	  parameters to be prompted and used, closes bug #1495310.
+
 2006-05-26  MenTaLguY  <mental@rydia.net>
 
 	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:
